--- a/templates/experience.html
+++ b/templates/experience.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <h1 class="text-center my-5">Indica la tua esperienza per gli argomenti selezionati</h1>
-        <form method="GET" action="{{ url_for('salva_esperienza') }}">
+        <form method="GET" action="{{ url_for('save_experience') }}">
             {% for argomento in argomenti %}
             <div class="form-group row">
 
