--- a/templates/show_courses.html
+++ b/templates/show_courses.html
@@ -3,7 +3,7 @@
 <head>
     <title>Corsi</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/aggiunte.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/show_courses.css') }}">
 
 
 </head>
