--- a/templates/show_courses_mod.html
+++ b/templates/show_courses_mod.html
@@ -5,11 +5,25 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/show_courses.css') }}">
 
-    <style>
+  <style>
         .course-container {
             border: 1px solid #ccc;
             padding: 10px;
             margin-bottom: 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            height: 100%;
+        }
+
+        .course-list {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
+
+        .course-item {
+            flex-basis: 30%;
         }
     </style>
 </head>
