--- a/templates/show_courses.html
+++ b/templates/show_courses.html
@@ -18,7 +18,7 @@
             <form action="{{ course['course_url'] }}">
                 <div class="course-container">
                     <h3>{{ course['title'] }}</h3>
-                    <h3>{{ course['institution'] }}</h3>
+                    <p>{{ course['institution'] }}</p>
                     <p>{{ course['summary'] }}</p>
                     <p>{{ course['Level'] }}</p>
                     <input type="submit" value="Go to the Course" class="btn btn-primary btn-block"/>
