--- a/static/bootstrap/css/aggiunte.css
+++ b/static/bootstrap/css/aggiunte.css
@@ -16,13 +16,12 @@ li {
 .course-container {
   max-width: 600px;
   margin: 0 auto;
-  align: center;
+  horizontal-align: center;
 }
 .form-check-label {
   padding:5px;
   font-size: 20px;
   text-align: center;
-
 
 }
 .form-check-inline {
