--- a/static/bootstrap/css/aggiunte.css
+++ b/static/bootstrap/css/aggiunte.css
@@ -16,7 +16,7 @@ li {
 .course-container {
   max-width: 600px;
   margin: 0 auto;
-  horizontal-align: center;
+  text-align: center;
 }
 .form-check-label {
   padding:5px;
