--- a/templates/experience.html
+++ b/templates/experience.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Esperienza Utente</title>
+    <title>User Experience</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/aggiunte.css') }}">
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center my-5">Indica la tua esperienza per gli argomenti selezionati</h1>
+        <h1 class="text-center my-5">Specify your experience in the selected topics</h1>
         <form method="GET" action="{{ url_for('save_experience') }}">
             {% for argomento in argomenti %}
             <div class="form-group row">
@@ -20,7 +20,7 @@
             {% endfor %}
             <div class="form-group row">
                 <div class="text-center my-5">
-                    <button type="submit" class="btn btn-primary btn-block">Invia</button>
+                    <button type="submit" class="btn btn-primary btn-block">Send</button>
                 </div>
             </div>
         </form>
