--- a/static/bootstrap/css/aggiunte.css
+++ b/static/bootstrap/css/aggiunte.css
@@ -2,6 +2,7 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  align: center;
 }
 
 li {
@@ -11,14 +12,10 @@ li {
   border: 1px solid #ddd;
   border-radius: 4px;
   text-align: center;
+  max-width: 500px;
 }
 
-.course-container {
-  width: 500px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-}
+
 .form-check-label {
   padding:5px;
   font-size: 20px;
