--- a/static/bootstrap/css/aggiunte.css
+++ b/static/bootstrap/css/aggiunte.css
@@ -2,7 +2,6 @@ ul {
   list-style-type: none;
   margin: 5px;
   padding: 0;
-  text-align: center;
 }
 
 li {
@@ -14,7 +13,10 @@ li {
   text-align: center;
   max-width: 500px;
 }
-
+.course-container {
+  max-width: 300px;
+  margin: 0 auto;
+}
 
 .form-check-label {
   padding:5px;
