--- a/static/bootstrap/css/aggiunte.css
+++ b/static/bootstrap/css/aggiunte.css
@@ -16,6 +16,11 @@ li {
 .course-container {
   max-width: 300px;
   margin: 0 auto;
+  text-align: center;
+}
+
+.block-container {
+  text-align: center;
 }
 
 .form-check-label {
