--- a/static/bootstrap/css/aggiunte.css
+++ b/static/bootstrap/css/aggiunte.css
@@ -1,21 +1,19 @@
 ul {
-  list-style-type: none;
-  margin: 5px;
-  padding: 0;
-}
+    list-style-type: none;
+    margin: 5px auto; /* Added 'auto' to center-align the list */
+    padding: 0;
+    max-width: 600px; /* Added max-width to limit the list width */
+    }
 
 li {
-  padding: 12px;
-  margin: 10px;
-  background-color: #f5f5f5;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  text-align: center;
-  max-width: 500px;
-}
-.course-container {
-  max-width: 300px;
-  margin: 0 auto;
+    padding: 12px;
+    margin: 10px;
+    background-color: #f5f5f5;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    text-align: center;
+    max-width: 500px;
+    margin: 0 auto; /* Added 'auto' to center-align the list items */
 }
 
 .block-container {
