--- a/templates/experience.html
+++ b/templates/experience.html
@@ -14,7 +14,14 @@
 
                 <label class="col-sm-3 col-form-label"><h3>{{ argomento }}</h3></label>
                 <div class="col-sm-9">
-                    <input type="range" class="form-control-range" min="1" max="10" step="1" name="{{ argomento }}" id="{{ argomento }}" required>
+                    <input type="range" class="form-control-range" list="markers" min="1" max="10" step="1" name="{{ argomento }}" id="{{ argomento }}" required>
+                    <datalist id="markers">
+                      <option value="0"></option>
+                      <option value="25"></option>
+                      <option value="50"></option>
+                      <option value="75"></option>
+                      <option value="100"></option>
+                    </datalist>
                 </div>
             </div>
             {% endfor %}
