--- a/templates/experience.html
+++ b/templates/experience.html
@@ -16,11 +16,16 @@
                 <div class="col-sm-9">
                     <input type="range" class="form-control-range" list="markers" min="1" max="10" step="1" name="{{ argomento }}" id="{{ argomento }}" required>
                     <datalist id="markers">
-                      <option value="0"></option>
-                      <option value="25"></option>
-                      <option value="50"></option>
-                      <option value="75"></option>
-                      <option value="100"></option>
+                      <option value="0">|</option>
+                      <option value="10">|</option>
+                      <option value="20">|</option>
+                      <option value="30">|</option>
+                      <option value="40">|</option>
+                      <option value="50">|</option>
+                      <option value="60">|</option>
+                      <option value="70">|</option>
+                      <option value="80">|</option>
+                      <option value="90">|</option>
                     </datalist>
                 </div>
             </div>
