--- a/static/bootstrap/css/aggiunte.css
+++ b/static/bootstrap/css/aggiunte.css
@@ -36,56 +36,10 @@ input[type=checkbox] {
     transform: scale(1.8);
 }
 
-input[type="range"] {
-    -webkit-appearance: none;
-    width: 100%;
-    height: 10px;
-    border-radius: 5px;
-    background-color: #ddd;
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: opacity 0.2s;
-    transition: opacity 0.2s;
-}
-
-input[type="range"]::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background-color: #007bff;
-    cursor: pointer;
-}
-
-input[type="range"]::-moz-range-thumb {
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background-color: #007bff;
-    cursor: pointer;
-}
-
-input[type="range"]:hover {
-    opacity: 1;
-}
-
-input[type="range"]::-webkit-slider-runnable-track {
-    width: 100%;
-    height: 4px;
-    cursor: pointer;
-    background: #007bff;
-}
-
-input[type="range"]::-moz-range-track {
-    width: 100%;
-    height: 4px;
-    cursor: pointer;
-    background: #007bff;
-}
-
-input[type="range"]::-moz-range-progress {
-    height: 4px;
-    background-color: #ddd;
+input[type=range] {
+  margin-top: 20px;
+  margin-left: 150px;
+  transform: scale(1.4);
+  width: 400px;
 }
 
