--- a/templates/experience.html
+++ b/templates/experience.html
@@ -14,19 +14,7 @@
 
                 <label class="col-sm-3 col-form-label"><h3>{{ argomento }}</h3></label>
                 <div class="col-sm-9">
-                    <input type="range" class="form-control-range" list="markers" min="1" max="10" step="1" name="{{ argomento }}" id="{{ argomento }}" required>
-                    <datalist id="markers">
-                      <option value="0">|</option>
-                      <option value="10">|</option>
-                      <option value="20">|</option>
-                      <option value="30">|</option>
-                      <option value="40">|</option>
-                      <option value="50">|</option>
-                      <option value="60">|</option>
-                      <option value="70">|</option>
-                      <option value="80">|</option>
-                      <option value="90">|</option>
-                    </datalist>
+                    <input type="range" class="form-control-range" min="1" max="10" step="1" name="{{ argomento }}" id="{{ argomento }}" required>
                 </div>
             </div>
             {% endfor %}
@@ -37,6 +25,5 @@
             </div>
         </form>
     </div>
-    <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
 </body>
 </html>
