--- a/templates/login.html
+++ b/templates/login.html
@@ -94,7 +94,7 @@
 			</div>
 			<div class="form-group">
 				<label for="password"><b>Password</b></label>
-				<input type="text" placeholder="Enter Password" name="password" id="password" required>
+				<input type="password" placeholder="Enter Password" name="password" id="password" required>
 			</div>
 
 			<button type="submit">Login</button>
