--- a/templates/register.html
+++ b/templates/register.html
@@ -83,11 +83,11 @@
 <body>
     <h1>Register</h1>
     <form method="POST" action="{{ url_for('register') }}">
-        <div>
+        <div class="form-group">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
         </div>
-        <div>
+        <div class="form-group">
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
         </div>
