--- a/templates/register_fail.html
+++ b/templates/register_fail.html
@@ -95,7 +95,7 @@
                 <p>Username already exists</p>
             </div>
             <div>
-                <input type="submit" value="Register">
+                <input type="submit" value="Register" class="btn btn-primary">
             </div>
         </form>
     </div>
