--- a/templates/register.html
+++ b/templates/register.html
@@ -92,7 +92,7 @@
                 <input type="password" id="password" name="password" required>
             </div>
             <div>
-                <input type="submit" value="Register">
+                <input type="submit" value="Register" class="btn btn-primary">
             </div>
         </form>
     </div>
